@@ -9,6 +9,7 @@ documents those changes that are of interest to users and administrators.
  -- scrontab - fix capturing the cronspec request in the job script.
  -- openapi/dbv0.0.37 - Add missing method POST for /associations/.
  -- If ALTER TABLE was already run, continue with database upgrade.
+ -- slurmstepd - Gracefully handle RunTimeQuery returning no output.
 
 * Changes in Slurm 21.08.2
 ==========================
